# schema-matching-framework

./: LICENSE.txt  README.md  pyproject.toml
data/: MIMIC_III_Schema.csv  MIMIC_to_OMOP_Mapping.csv  OMOP_Schema.csv
data reduced/: MIMIC_III_Schema_reduced.csv  MIMIC_to_OMOP_Mapping.csv  OMOP_Schema_reduced.csv  README.md
src/schema_matching_framework/: __about__.py  sudoku_schema_matcher.py
src/schema_matching_framework/model/: mapping.py  schema.py
tests/: __init__.py  reduced_data_test.py  sudoku_schema_matcher_test.py
