[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schema-matching-framework"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "markorskip", email = "markorskip@efficientsoftware.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic",
  "sentence-transformers"
]

[project.urls]
Documentation = "https://github.com/markorskip/schema-matching-framework#readme"
Issues = "https://github.com/markorskip/schema-matching-framework/issues"
Source = "https://github.com/markorskip/schema-matching-framework"

[tool.hatch.version]
path = "src/schema_matching_framework/__about__.py"


[tool.hatch.envs.default]
dependencies = [
  "pydantic"
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/schema_matching_framework tests}"

[tool.coverage.run]
source_pkgs = ["schema_matching_framework", "tests"]
branch = true
parallel = true
omit = [
  "src/schema_matching_framework/__about__.py",
]

[tool.coverage.paths]
schema_matching_framework = ["src/schema_matching_framework", "*/schema-matching-framework/src/schema_matching_framework"]
tests = ["tests", "*/schema-matching-framework/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
